--- a/assets/style.css
+++ b/assets/style.css
@@ -35,9 +35,6 @@
     height: fit-content;
 }
 
-.header.scrolled{
-    background-color: whitesmoke ;
-}
 
 .navigation{
     width: inherit;
@@ -672,3 +669,36 @@ hr{
 }
 }
 
+
+
+
+
+/* loading overlay */
+#loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  /* background: rgba(255, 255, 255, 0.6); */
+  backdrop-filter: blur(20px);
+  z-index: 9999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 6px solid whitesmoke;
+  border-top: 6px solid #3498db;
+  border-radius: 100%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
